<resources>
    <string name="app_name">My Application</string>
    <string name="write_post_here">Write post here</string>
    <string name="save">Save</string>
    <string name="movie_image">Movie Image</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_video_file">Select Video File</string>
    <string name="select_poster_file">Select Poster File</string>
    <string name="add_movie">Add Movie</string>
    <string name="title">Title</string>
    <string name="director">Director</string>
    <string name="todo">TODO</string>
    <string name="update_movie">Update Movie</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="manage_movies">Manage Movies</string>
    <string name="manage_categories">Manage Categories</string>>
    <string name="category_unknown">Category: Unknown</string>
    <string name="change_the_mode">change the mode</string>
    <string name="ip_address">http://10.0.2.2:5000</string>
</resources>